--- a/styles/style.css
+++ b/styles/style.css
@@ -1,50 +1,56 @@
+@charset "UTF-8";
 #login {
-    margin:0 auto;
-    border: solid 1px gray;
-    padding:2%;
-    position:absolute;
-    left: 50%;
-    top: 50%;
-    width: 300px;
-    height: 200px;
-    margin-left: -150px; /* Cette valeur doit être la moitié négative de la valeur du width */
-    margin-top: -150px;
+  margin: 0 auto;
+  border: solid 1px gray;
+  padding: 2%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 300px;
+  height: 200px;
+  margin-left: -150px;
+  /* Cette valeur doit être la moitié négative de la valeur du width */
+  margin-top: -150px;
 }
 
-button{
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
 }
 
 button:hover {
-    opacity: 0.8;
-  }
+  opacity: 0.8;
+}
 
 input[type=text], input[type=password] {
-   width: 100%;
-   padding: 12px 20px;
-   margin: 8px 0;
-   display: inline-block;
-   border: 1px solid #ccc;
-   box-sizing: border-box;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 #alert {
-    border: red 1px solid;
-    background-color:#ff8080;
-    margin-bottom:5px;
-    display:none;
+  border: red 1px solid;
+  background-color: #ff8080;
+  margin-bottom: 5px;
+  display: none;
 }
+
 #alert #alertLabel {
-    text-align:center;
-    color:white;
-    padding:1%;
+  text-align: center;
+  color: white;
+  padding: 1%;
 }
-#closeAlert{
-    color:white;
+
+#closeAlert {
+  color: white;
 }
+/*# sourceMappingURL=style.css.map */
