--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,20 @@
-@charset "UTF-8";
+body {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  background-color: #0093d2;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
 #login {
+  background-color: #FFF;
   margin: 0 auto;
   border: solid 1px gray;
   padding: 2%;
@@ -8,9 +23,13 @@
   top: 50%;
   width: 300px;
   height: 200px;
-  margin-left: -150px;
-  /* Cette valeur doit être la moitié négative de la valeur du width */
-  margin-top: -150px;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+}
+
+#login label {
+  font-family: Verdana, Helvetica;
+  font-size: 14px;
 }
 
 button {
@@ -27,7 +46,8 @@ button:hover {
   opacity: 0.8;
 }
 
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
