--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,10 +1,21 @@
-$bleu : #0093d2;
+$bleu: #0093d2;
+body {
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
 
-    .container{
-        background-color: $bleu;
-        }
+.container {
+    background-color: $bleu;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+}
 
-    #login {
+#login {
+    background-color: #FFF;
     margin: 0 auto;
     border: solid 1px gray;
     padding: 2%;
@@ -14,6 +25,10 @@ $bleu : #0093d2;
     width: 300px;
     height: 200px;
     transform: translateX(-50%) translateY(-50%);
+    label {
+        font-family: Verdana, Helvetica;
+        font-size: 14px;
+    }
 }
 
 button {
@@ -24,7 +39,7 @@ button {
     border: none;
     cursor: pointer;
     width: 100%;
-    #:hover {
+    &:hover {
         opacity: 0.8;
     }
 }
