--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,11 +20,11 @@ body {
     border: solid 1px gray;
     padding: 2%;
     position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 300px;
+    top:50%;
+        left: 50%;
+    width: 310px;
     height: 200px;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateY(-50%) translateX(-50%);
     label {
         font-family: Verdana, Helvetica;
         font-size: 14px;
@@ -32,15 +32,17 @@ body {
 }
 
 button {
-    background-color: #4CAF50;
-    color: white;
+    background-color: $bleu;
+    color: #f2f2f2;
     padding: 14px 20px;
     margin: 8px 0;
-    border: none;
     cursor: pointer;
     width: 100%;
+    transition: all 0.4s;
+    border: solid 1px $bleu;
     &:hover {
-        opacity: 0.8;
+        background-color: #f2f2f2;
+        color:$bleu;
     }
 }
 
@@ -60,6 +62,10 @@ input[type=password] {
     margin-bottom: 5px;
     display: none;
     #alertLabel {
+        font-family: Verdana, Helvetica;
+        font-size: 12px;
+        margin-left: 10px;
+        vertical-align: middle;
         text-align: center;
         color: white;
         padding: 1%;
@@ -67,5 +73,8 @@ input[type=password] {
 }
 
 #closeAlert {
+    float: right;
+    margin-right: 10px;
     color: white;
+    margin-top: 2px;
 }
