--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,42 @@ body {
   margin: 0;
 }
 
+nav {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  height: 75px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 22px;
+  background-color: #0093d2;
+  -webkit-box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
+  box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
+}
+
+nav ul {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+nav ul a {
+  color: #fff;
+}
+
+nav ul li {
+  display: inline-block;
+  width: 33%;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+}
+
 #login {
   background-color: #FFF;
   margin: 0 auto;
