--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,14 +14,50 @@ body {
     margin: 0;
 }
 
+nav {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    height: 75px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 22px;
+    background-color: $bleu;
+    -webkit-box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
+    ul {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        a {
+            color: #fff;
+            &:last-child::after {
+                
+            }
+        }
+        li {
+            display: inline-block;
+            width: 33%;
+            text-align: center;
+        }
+    }
+}
+
+a {
+    text-decoration: none;
+}
+
 #login {
     background-color: #FFF;
     margin: 0 auto;
     border: solid 1px gray;
     padding: 2%;
     position: absolute;
-    top:50%;
-        left: 50%;
+    top: 50%;
+    left: 50%;
     width: 310px;
     height: 200px;
     transform: translateY(-50%) translateX(-50%);
@@ -42,7 +78,7 @@ button {
     border: solid 1px $bleu;
     &:hover {
         background-color: #f2f2f2;
-        color:$bleu;
+        color: $bleu;
     }
 }
 
