--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,15 @@
-body {
-  position: relative;
+html,body {
+overflow: hidden;
   margin: 0;
   padding: 0;
+  height: 100%;;
 }
 
 .container {
   background-color: #0093d2;
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 0;
   margin: 0;
 }
