--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
-html,body {
-overflow: hidden;
+body {
+  position: relative;
   margin: 0;
   padding: 0;
-  height: 100%;;
+  height: 100%;
 }
 
 .container {
@@ -119,5 +119,23 @@ input[type=password] {
   margin-right: 10px;
   color: white;
   margin-top: 2px;
+}
+
+.grp1 {
+  height: 100%;
+  background: #fff;
+  width: 100%;
+}
+
+.grp1 #newevent {
+  border: solid 1px #0093d2;
+  background-color: #0093d2;
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-size: 21px;
+  font-family: Verdana;
+  color: white;
+  float: right;
+  margin-right: 25px;
 }
 /*# sourceMappingURL=style.css.map */
