--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,11 +1,14 @@
 $bleu: #0093d2;
+
+    html{height: 100%}
+
 body {
     position: relative;
     margin: 0;
     padding: 0;
     height: 100%;
 }
-
+ 
 .container {
     background-color: $bleu;
     position: relative;
