--- a/styles/style.css
+++ b/styles/style.css
@@ -90,8 +90,8 @@ button:hover {
   color: #0093d2;
 }
 
-input[type=text],
-input[type=password] {
+.block input[type=text],
+.block input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -141,5 +141,14 @@ input[type=password] {
   color: white;
   float: right;
   margin-right: 25px;
+}
+
+img {
+  max-width: 180px;
+}
+
+input[type=file] {
+  padding: 10px;
+  background: #2d2d2d;
 }
 /*# sourceMappingURL=style.css.map */
