--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,7 @@ nav {
   background-color: #0093d2;
   -webkit-box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
   box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
+  z-index: 2;
 }
 
 nav ul {
@@ -123,6 +124,12 @@ button:hover {
   margin-right: 10px;
   color: white;
   margin-top: 2px;
+}
+
+.grp2 {
+  background: #f2f2f2;
+  width: 100%;
+  padding-top: 20px;
 }
 
 .grp1 {
