--- a/styles/style.scss
+++ b/styles/style.scss
@@ -30,6 +30,7 @@ nav {
     -webkit-box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
     -moz-box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
     box-shadow: 0px 7px 23px -2px rgba(0, 0, 0, 0.35);
+        z-index: 2;
     ul {
         width: 100%;
         margin: 0;
@@ -119,12 +120,18 @@ button {
     color: white;
     margin-top: 2px;
 }
-
+.grp2{ 
+    background: #f2f2f2;
+    width: 100%;
+    padding-top: 20px;
+   // position: relative;
+    }
 .grp1 {
     height: 100%;
     background: #f2f2f2;
     width: 100%;
     padding-top: 20px;
+  //  position: relative;
     #newevent {
         border: solid 1px $bleu;
         background-color: $bleu;
