--- a/styles/style.scss
+++ b/styles/style.scss
@@ -224,8 +224,8 @@ input[type=file] {
                 height: 100%;
                 display: flex;
                 flex-direction: row;
-                #photo,
-                #description {
+                .photo,
+                .description {
                     width: 49%;
                     text-align: center;
                     height: 100%;
