changement taille typo

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -237,6 +237,8 @@ input[type=file] {
                         width: auto;
                     }
                 }
+                    .description{
+                        font-size: 24px;}
             }
         }
     }
