--- a/styles/style.css
+++ b/styles/style.css
@@ -261,6 +261,10 @@ input[type=file] {
   width: auto;
 }
 
+.affichage .rslides .ecran .annonce .description {
+  font-size: 24px;
+}
+
 .submit {
   width: 300px;
   border-radius: 25px;
